<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="co.com.smartquick.smarttickets.activities.registro.RegistroActivity"
    tools:showIn="@layout/activity_registro">

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_up_button"
        android:layout_alignParentStart="true"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/img"
                android:src="@drawable/ic_user"
                android:tint="@color/black" />

            <EditText
                android:id="@+id/edtNombre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/user_icon"
                android:background="@android:color/transparent"
                android:hint="@string/name"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/lastname_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/img"
                android:tint="@color/black"
                app:srcCompat="@drawable/ic_people_black_24dp" />

            <EditText
                android:id="@+id/edtApellido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/lastname_icon"
                android:background="@android:color/transparent"
                android:hint="@string/apellido"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/email_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/img"
                android:src="@drawable/ic_email"
                android:tint="@color/black" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/email_icon"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/password_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/img"
                android:src="@drawable/ic_password"
                android:tint="@color/black" />

            <EditText
                android:id="@+id/edtPass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/password_icon"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/birthday_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:clickable="false"
                android:contentDescription="@string/img"
                android:tint="@color/black"
                app:srcCompat="@android:drawable/stat_sys_phone_call" />

            <EditText
                android:id="@+id/edtTelfono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginEnd="20dp"
                android:layout_toEndOf="@+id/birthday_icon"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:gravity="center_vertical"
                android:hint="@string/telefono"
                android:inputType="date"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/light_text"
                android:textSize="@dimen/text_size_medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="@color/divider" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAccent">

            <LinearLayout
                android:id="@+id/btnRegistro"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_big" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signin_layout"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/already_have_account"
                    android:textColor="@color/light_text"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/text_size_medium" />

                <LinearLayout
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="-10dp"
                    android:clickable="true"

                    android:focusable="true"
                    android:text="@string/forgot_password">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
