<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/img"
        android:scaleType="centerCrop"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/img"
                android:padding="10dp"
                android:src="@drawable/smarttickets"
                android:tint="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@android:color/white">

                <RelativeLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <ImageView
                        android:id="@+id/email_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/img"
                        android:src="@drawable/ic_email"
                        android:tint="@android:color/black" />

                    <EditText
                        android:id="@+id/email_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@+id/email_icon"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_text"
                        android:textSize="@dimen/text_size_medium" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_alignParentBottom="true"
                        android:background="@color/divider" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/email_layout">

                    <ImageView
                        android:id="@+id/password_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/img"
                        android:src="@drawable/ic_password"
                        android:tint="@color/black" />

                    <EditText
                        android:id="@+id/password_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@+id/password_icon"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_text"
                        android:textSize="@dimen/text_size_medium" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/password_layout"
                    android:background="@color/colorPrimary">

                    <LinearLayout
                        android:id="@+id/login_button"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:gravity="center"
                            android:text="@string/sign_in"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size_big" />
                    </LinearLayout>

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/btnCrearCuenta"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/forgot_password">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="@string/create_account"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
